# LobachevskyUniversity_HomeWork

./: CMakeLists.txt  README.md  main.c
euclideanAlgorithm/: EuclideanAlgorithm.c  EuclideanAlgorithm.h
searchSquareinCircle/: searchSquareInCircle.c  searchSquareInCircle.h
testTimeEuclideanAlgorithm/: EcludeanTest.c  EuclideanTest.h
